--- a/manuscript/manuscript.Rnw
+++ b/manuscript/manuscript.Rnw
@@ -147,6 +147,7 @@ library("ape")
 library("ggtree")
 library("topGO")
 library("org.Hs.eg.db")
+library("scales")
 
 @ 
 
@@ -1742,6 +1743,89 @@ and progesterone in humans, other primates, and ruminants in late
 pregnancy. In addition, HSD3B1 shows high levels in dog, which matches
 the high levels of placental production of progesterone at term in
 that species. \DLA{I think we need citations for this}
+
+\begin{figure}
+<<hormone.genes.plot,echo=FALSE,fig.width=8,fig.height=8,warning=FALSE,message=FALSE>>=
+
+gene.expression.nozero <- function(genes) {
+    temp <-
+        data.matrix.dt(dcast(combined.fpkm[human_name %in% genes,],
+                             human_name~species,
+                             value.var="FPKM",
+                             fun.aggregate=function(x){x[1]}))
+    temp <-
+        temp[apply(temp,1,function(x){sum(x,na.rm=TRUE)})>5,]
+    return(temp)
+}
+
+### hormone genes
+hormone.genes <- c("CGA","CGB","CGB1","CGB2","CGB5","CGB8","CSH1","CSH2","CSHL1","CYP19A1",
+                   "GH2","GHRH","HSD3B1","NPPB","NPPC","PRL","RLN1")
+hormone.expression.nozero <-
+    gene.expression.nozero(hormone.genes)
+
+hor.exp.long <- melt(log10(hormone.expression.nozero+1)[rev(1:nrow(hormone.expression.nozero)),])
+colnames(hor.exp.long)[1:3] <- c("gene","species","fpkm")
+hor.exp.long <- hor.exp.long[hor.exp.long$gene!="IGF2",]
+
+### galectin genes
+galectin.genes <- unique(grep("^LGALS",combined.fpkm[,human_name],value=TRUE))
+
+galectin.expression.nozero <-
+    gene.expression.nozero(galectin.genes)
+
+gal.exp.long <- melt(log10(galectin.expression.nozero+1)[rev(1:nrow(galectin.expression.nozero)),])
+colnames(gal.exp.long)[1:3] <- c("gene","species","fpkm")
+
+### IGF related genes
+
+igfrelated.genes <- unique(grep("^IGF",combined.fpkm[,human_name],value=TRUE))
+
+igfrelated.expression.nozero <-
+    gene.expression.nozero(igfrelated.genes)
+
+igf.exp.long <- melt(log10(igfrelated.expression.nozero+1)[rev(1:nrow(igfrelated.expression.nozero)),])
+colnames(igf.exp.long)[1:3] <- c("gene","species","fpkm")
+
+igf.exp.long$type <- "IGF Related"
+gal.exp.long$type <- "Galectin"
+hor.exp.long$type <- "Hormone"
+
+### scalerange <- range(c(igf.exp.long$fpkm,gal.exp.long$fpkm,hor.exp.long$fpkm),na.rm=TRUE)
+### gradientends <- scalerange + rep(c(0,100,200), each=2)
+### colorends <- c("white", "red", "white", "green", "white", "blue")
+### 
+### gal.exp.long$fpkm <- gal.exp.long$fpkm+100
+### hor.exp.long$fpkm <- hor.exp.long$fpkm+200
+
+combined.long <-
+    rbind(igf.exp.long,
+          gal.exp.long,
+          hor.exp.long)
+combined.long$species <-
+    factor(gsub("^([^ ])[^ ]* +([^ ]*)","\\1. \\2",capfirst(combined.long$species)),
+           levels=gsub("^([^ ])[^ ]* +([^ ]*)","\\1. \\2",capfirst(names(species.names))))
+
+common.plot.options <- 
+    list(geom_tile(aes(fill = fpkm), colour = "white"),
+##         scale_fill_gradientn(colours = colorends, values = rescale(gradientends)),
+         scale_fill_gradient(low = "#132B43", high = "#56B1F7", space = "Lab", na.value = "grey50",
+                             guide=guide_colorbar(title=expression(log[10](FPKM)))),
+         scale_x_discrete("", expand = c(0, 0)),
+         scale_y_discrete("", expand = c(0, 0)),
+         theme_grey(base_size = 9),
+         theme(legend.position = "top",
+               axis.ticks = element_blank(), 
+               axis.text.x = element_text(angle = 300, hjust = 0, vjust=1,face="italic")),
+         facet_wrap(~type,scale="free_y",ncol=1)
+         )
+print(ggplot(combined.long, aes(y=gene, x=species))
+      + common.plot.options
+      )
+@ 
+\caption{Expression of Hormone Genes, Galectins, and IGF related genes}
+\label{fig:hormone_genes}
+\end{figure}
 
 \begin{figure}
 <<estrogen.evolution.tree,echo=FALSE,fig.width=12,fig.height=12,warning=FALSE,message=FALSE>>=
