--- a/manuscript/manuscript.Rnw
+++ b/manuscript/manuscript.Rnw
@@ -84,6 +84,7 @@
 \renewcommand\cite[1]{\autocite{#1}}
 \pagestyle{fancy}
 
+% species names
 \newcommand{\smonkey}[0]{\textit{A. fusciceps}\xspace}
 \newcommand{\cow}[0]{\textit{B. taurus}\xspace}
 \newcommand{\dog}[0]{\textit{C. familiaris}\xspace}
@@ -1215,7 +1216,7 @@ placental expression of the estrogen synthase gene (CYP19A1) in cows
 (75.1346), and comparatively greater expression of HSD3B1 (\ac{FPKM}=
 157.622).
 
-\subsection{African Elephant Placenta Transcriptome}
+\subsection{\elephant Placenta Transcriptome}
 
 \begin{table}
 \tiny
@@ -1260,6 +1261,26 @@ expressed in the endometrium of the uterus in humans (Rutanen et al.,
 1987).
 
 
+\subsection{\armadillo Placenta Transcriptome}
+
+\begin{table}
+\tiny
+<<top.50.armadillo.expressed.genes,echo=FALSE,results="asis">>=
+top.armadillo.genes <- top.genes.table(species.name="dasypus novemcinctus")
+print(xtable(top.armadillo.genes),
+      booktabs=TRUE,
+      floating=FALSE,
+      sanitize.text.function=genes.table.sanitize,include.rownames=FALSE)
+setkey(top.armadillo.genes,"Gene symbol")
+@ 
+\caption{Expression in \ac{FPKM} of top 50 genes which are not ribosomal, 
+mitochondrial, or whose human ortholog is a housekeeping gene in
+  \armadillo}
+\label{tab:top50_armadillo_placenta}
+\end{table}
+
+The top 50 expressed genes in the term placenta of \armadillo are in
+\cref{tab:top50_armadillo_placenta}.
 
 \subsection{Opossum Placenta Transcriptome}
 
